@@ -1,7 +1,7 @@
 /*
  * Axelor Business Solutions
  *
- * Copyright (C) 2005-2023 Axelor (<http://axelor.com>).
+ * Copyright (C) 2005-2024 Axelor (<http://axelor.com>).
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as
@@ -18,15 +18,16 @@
  */
 package com.axelor.apps.stock.web;
 
-import com.axelor.apps.ReportFactory;
 import com.axelor.apps.base.AxelorException;
+import com.axelor.apps.base.db.PrintingTemplate;
+import com.axelor.apps.base.db.repo.PrintingTemplateRepository;
 import com.axelor.apps.base.service.exception.TraceBackService;
-import com.axelor.apps.report.engine.ReportSettings;
 import com.axelor.apps.stock.db.StockLocation;
-import com.axelor.apps.stock.db.repo.StockLocationRepository;
 import com.axelor.apps.stock.exception.StockExceptionMessage;
-import com.axelor.apps.stock.report.IReport;
+import com.axelor.apps.stock.service.StockLocationPrintService;
 import com.axelor.apps.stock.service.StockLocationService;
+import com.axelor.common.ObjectUtils;
+import com.axelor.db.mapper.Mapper;
 import com.axelor.i18n.I18n;
 import com.axelor.inject.Beans;
 import com.axelor.meta.schema.actions.ActionView;
@@ -34,21 +35,17 @@ import com.axelor.rpc.ActionRequest;
 import com.axelor.rpc.ActionResponse;
 import com.axelor.rpc.Context;
 import com.axelor.utils.db.Wizard;
-import com.google.common.base.Joiner;
 import com.google.inject.Singleton;
 import java.io.IOException;
-import java.lang.invoke.MethodHandles;
 import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Set;
+import java.util.Map;
+import org.apache.commons.lang3.ArrayUtils;
 import org.eclipse.birt.core.exception.BirtException;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 @Singleton
 public class StockLocationController {
 
-  private final Logger logger = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
   /**
    * Method that generate inventory as a pdf
    *
@@ -58,80 +55,55 @@ public class StockLocationController {
    * @throws BirtException
    * @throws IOException
    */
+  @SuppressWarnings("unchecked")
   public void print(ActionRequest request, ActionResponse response) throws AxelorException {
     try {
       Context context = request.getContext();
-      @SuppressWarnings("unchecked")
+
+      // print from form
       LinkedHashMap<String, Object> stockLocationMap =
           (LinkedHashMap<String, Object>) context.get("_stockLocation");
       Integer stockLocationId = (Integer) stockLocationMap.get("id");
-      StockLocationService stockLocationService = Beans.get(StockLocationService.class);
-      StockLocationRepository stockLocationRepository = Beans.get(StockLocationRepository.class);
 
-      StockLocation stockLocation =
-          stockLocationId != null ? stockLocationRepository.find(new Long(stockLocationId)) : null;
-      String locationIds = "";
+      // print from grid selection
+      List<Integer> selectedStockLocationIds = (List<Integer>) context.get("_ids");
 
-      String printType = (String) context.get("printingType");
-      String exportType = (String) context.get("exportTypeSelect");
+      boolean withoutDetailsByStockLocation =
+          context.get("withoutDetailsByStockLocation") != null
+              && (boolean) context.get("withoutDetailsByStockLocation");
 
-      @SuppressWarnings("unchecked")
-      List<Integer> lstSelectedLocations = (List<Integer>) context.get("_ids");
-      if (lstSelectedLocations != null) {
-        for (Integer it : lstSelectedLocations) {
-          Set<Long> idSet =
-              stockLocationService.getContentStockLocationIds(
-                  stockLocationRepository.find(new Long(it)));
-          if (!idSet.isEmpty()) {
-            locationIds += Joiner.on(",").join(idSet) + ",";
-          }
-        }
+      Long[] idsArray =
+          ObjectUtils.notEmpty(selectedStockLocationIds)
+              ? ArrayUtils.toObject(
+                  selectedStockLocationIds.stream().mapToLong(Long::valueOf).toArray())
+              : new Long[] {Long.valueOf(stockLocationId)};
+
+      String printTypeStr = (String) context.get("printingType");
+
+      PrintingTemplate stockLocationPrintTemplate = null;
+      if (context.get("stockLocationPrintTemplate") != null) {
+        stockLocationPrintTemplate =
+            Mapper.toBean(
+                PrintingTemplate.class,
+                (Map<String, Object>) context.get("stockLocationPrintTemplate"));
+        stockLocationPrintTemplate =
+            Beans.get(PrintingTemplateRepository.class).find(stockLocationPrintTemplate.getId());
       }
 
-      if (!locationIds.equals("")) {
-        locationIds = locationIds.substring(0, locationIds.length() - 1);
-        stockLocation = stockLocationRepository.find(new Long(lstSelectedLocations.get(0)));
-      } else if (stockLocation != null && stockLocation.getId() != null) {
-        Set<Long> idSet =
-            stockLocationService.getContentStockLocationIds(
-                stockLocationRepository.find(stockLocation.getId()));
-        if (!idSet.isEmpty()) {
-          locationIds = Joiner.on(",").join(idSet);
-        }
-      }
+      Integer printType = Integer.parseInt(printTypeStr);
+      String financialDataDateTimeString = (String) context.get("financialDataDateTime");
 
-      if (!locationIds.equals("")) {
-        String language = ReportSettings.getPrintingLocale(null);
+      String fileLink =
+          Beans.get(StockLocationPrintService.class)
+              .print(
+                  printType,
+                  stockLocationPrintTemplate,
+                  financialDataDateTimeString,
+                  withoutDetailsByStockLocation,
+                  idsArray);
+      String title = Beans.get(StockLocationPrintService.class).getOutputFileName(idsArray);
 
-        String title = I18n.get("Stock location");
-        if (stockLocation.getName() != null) {
-          title =
-              lstSelectedLocations == null
-                  ? I18n.get("Stock location") + " " + stockLocation.getName()
-                  : I18n.get("Stock location(s)");
-        }
-
-        if (stockLocationService.isConfigMissing(stockLocation, Integer.parseInt(printType))) {
-          response.setNotify(I18n.get(StockExceptionMessage.STOCK_CONFIGURATION_MISSING));
-        }
-
-        String fileLink =
-            ReportFactory.createReport(IReport.STOCK_LOCATION, title + "-${date}")
-                .addParam("StockLocationId", locationIds)
-                .addParam("Timezone", null)
-                .addParam("Locale", language)
-                .addFormat(exportType)
-                .addParam("PrintType", printType)
-                .generate()
-                .getFileLink();
-
-        logger.debug("Printing " + title);
-
-        response.setView(ActionView.define(title).add("html", fileLink).map());
-
-      } else {
-        response.setInfo(I18n.get(StockExceptionMessage.LOCATION_2));
-      }
+      response.setView(ActionView.define(title).add("html", fileLink).map());
       response.setCanClose(true);
     } catch (Exception e) {
       TraceBackService.trace(response, e);
